	  for UDP.  However, this functionality really does not make
	  sense, so it is disabled in the code (2013-4-30).
	* drivers/mtd/mtd_partition.c:  Support capability to clone one
	  MTD driver into several, MTD partition drivers, each of which
	  can manage a sub-region of the FLASH (2013-4-30).
	* configs/sim/nxffs:  Converted to use the kconfig-frontends
	  tools (20130-4-30).
	* configs/sim/mtdpart:  A new configuration to test MTD
	  partitions (2013-4-30).
	* configs/sim/mkroe-stm32f4:  Support for the MikroElektronika
	  Mikromedia for STM32F4 development board (from Ken Pettit, 2013-4-30).
	* fs/smartfs:  Add Ken Pettits SMART FS (2013-4-30).
	* include/nuttx/mtd.h and most MTD drivers:  Add support for
	  (optional) method to perform byte oriented writes if so configured
	  (2013-5-1).
	* arch/arm/src/kl/chip/kl25z128_pinmux.h:  Corrections fo the
	  pin multiplexing definitions from Alan Carvalho de Assis
	  (2013-5-2).
	* drivers/mtd/mtd_partition.c:  Fix a few bugs and add support for the
	  (option) byte write method (2013-5-3).
	* arch/arm/src/kl:  Repartitioning of definitions in headef files
	  from Alan Carvalho de Assis (2013-5-3).
	* drivers/mtd/smart.c, fs/smart, and other files:  SMART file system
	  now makes use of the MTD byte write capabilities when present (from
	  Ken Pettit, 2013-5-3).
	* drivers/mtd/m25px.c:  Some rearchitecting to use the byte write
	  capability (when possible) and to use 4KB sectors for the erase block
	  size when the part supports it (Ken Pettit, 2013-5-3).
	* configs/pirelli_dpl10: Adds a configuration for the pirelli phone
	  (from Craig Comstock via Alan Alan Carvalho de Assis, 2013-5-3).
	* arch/arm/src/calypso:  Fix some compilation warnings (2013-5-5).
	* configs/pirelli_dpl10/nsh_highram:  Converted to use the
	  kconfig-frontends tools (2013-5-5).
	* drivers/lcd/mio283qt2.c:  LCD was not being selected in setpower
	  method (also not being deselected in hwinitialize function)
	 (2013-5-6).