@@ -4676,4 +4676,8 @@
 	  kconfig-frontends tools (2013-5-5).
 	* drivers/lcd/mio283qt2.c:  LCD was not being selected in setpower
 	  method (also not being deselected in hwinitialize function)
-	 (2013-5-6).
+	  (2013-5-6).
+	* arch/arm/src/kl/kl_gpio.c and .h, configs/freedom-kl25z/src/freedom-kl25z.h,
+	  and configs/freedom-kl25z/src/kl_led.c:  Fixes LEDs on the Freedom KL25Z
+	  board (2013-5-6).
+
